first draft to regan and kevin

--- a/thesis/content/chp-1-intro.tex
+++ b/thesis/content/chp-1-intro.tex
@@ -15,37 +15,34 @@
 % What is now known/possible/better because of your thesis?
 % Outline of the thesis (optional)
 
-Computer games have been widely adopted as a form of entertainment. In 2014, an average of two Americans per household reported that they play video games, with each household owning at least one dedicated console ~\cite{entertainment2014essential}.
+Computer games have been widely adopted as a form of entertainment. In 2014, an average of two Americans per household reported that they play video games, with each household owning at least one dedicated console ~\cite{entertainment2014essential}. There have been technical advances that have driven game innovation over the past few decades, including advances to computer graphics, system performance, and human-computer interfaces. Novel input devices change what types of games can be built and what types of games people are inspired to play. Recently, researchers have been interested in how the affective (i.e., emotional) state of a game player can be brought into computer and video game experiences ~\cite{gilleade2005affective}. Augmenting traditional game controls with affective controls can increase a player's engagement with a system ~\cite{nacke2011biofeedback}, whereas adapting games based on a player's affective state (e.g., ~\cite{dekker2007please, epp2011identifying}) could optimize the play experience by keeping players engaged.
 
-% talk around two paragraphs about the nature of video games and their job as entertainment.
-
-There have been technical advances that have driven game innovation over the past few decades, including advances to computer graphics, system performance, and human-computer interfaces. Novel input devices change what types of games can be built and what types of games people are inspired to play. Recently, researchers have been interested in how the affective (i.e., emotional) state of a game player can be brought into computer and video game experiences ~\cite{gilleade2005affective}. Augmenting traditional game controls with affective controls can increase a player’s engagement with a system ~\cite{nacke2011biofeedback}, whereas adapting games based on a player’s affective state (e.g., ~\cite{dekker2007please, epp2011identifying}) could optimize the play experience by keeping players engaged.
-
-During recent years, game developers have provided more and more choices in how many AAA titles are played. While originally innovative, the concept of being able to complete a level by tactical prowess, controller skill, or stealth for example is now a mainstay of most adventure games. While these kinds of design decisions can help support a multitude of play styles in the expanded gamer demographic, it still cannot react to changes in skill or mood of an individual player on a day to day basis or throughout a given play session. Making computers capabale of perceiving the situation in terms of most human specific factors and responding dependent to this perception is of major steps towards a more friendly and natural communication interface between human and computer.
+Recently, game developers have provided more choices in how AAA titles are played. For example, the concept of being able to complete a level by tactical prowess, controller skill, or stealth was originally innovative; however, is now a mainstay of most adventure games. While these kinds of design decisions can help support a multitude of play styles in the expanding demographic of gamers, they still cannot react to changes in the skill or mood of an individual player on a day-to-day basis or throughout a single play session. Making computers capable of perceiving the situation of the player (including their affective state) and responding to this perception is a major step towards the next generation of games.
 
 \section{Problem}
 
-While it is possible to adapt a game to the measured performance of a player,
-%todo: add this: particularly in a multiplayer setting ~\cite{ref game balance stuff}
-it is harder to react to the players mood. This is difficult for two reasons, first because despite significant advances in affective computing
-%todo: add this: ~\cite{cite affcomp stuff}
-it is still difficult to reliably extract mood in real time, and second because it is unclear what the design feedback mechanism should be to address changes in player mood in real-time or near real time. Even if they could reliably detect mood, designers have no validated guidelines to determine how the game mechanics should be adjusted to enhance player experience. Researchers have investigated one-off approaches in the context of different games, and have adapted game elements including game graphics, screen shaking, and enemy spawn points (the number of locations in which enemies are put into the game world) ~\cite{dekker2007please}; character walking and turning speed, aiming direction, recoil amount, and firing rate ~\cite{epp2011identifying}; and flamethrower length, density of snow, enemy size, and enemy speed ~\cite{nacke2011biofeedback}. These different game elements can be loosely characterized into player abilities, enemy abilities, and the properties of the environment. Although these initial investigations have been absolutely fundamental for advancing the state of the art in affective game design, we still lack systematic studies on which types of game elements should be adapted (e.g., player abilities versus environmental variables) and how these design choices affect player performance and ultimately play experience.
+While it is possible to adapt a game to the measured performance of a player, it is harder to react to the player’s mood. This is difficult for two reasons: first because despite significant advances in affective computing, it is still difficult to reliably extract mood in real time; and second, because it is unclear what the design feedback mechanism should be to address changes in player mood in real-time or near real-time. However, even if systems could reliably detect mood, designers have no guidelines to determine how the game mechanics should be adjusted to enhance player experience. Researchers have investigated one-off approaches in the context of different games, and have adapted game elements including game graphics, screen shaking, and enemy spawn points (the number of locations in which enemies are put into the game world) ~\cite{dekker2007please}; character walking and turning speed, aiming direction, recoil amount, and firing rate ~\cite{epp2011identifying}; and flamethrower length, density of snow, enemy size, and enemy speed ~\cite{nacke2011biofeedback}. These different game elements can be loosely characterized into player abilities, enemy abilities, and the properties of the environment.
+
+Although these initial investigations have been absolutely fundamental for advancing the state of the art in affective game design, we still lack systematic studies on which types of game elements should be adapted (e.g., player abilities versus environmental variables) and how these design choices affect player performance and ultimately play experience. Therefore, the problems that we address in this thesis related to creating affective games that engage players are: game developers do not have a robust method for detecting player emotion in real-time, and, once sensed, game designers have little guidance on how to integrate player mood into game mechanics to create engaging play experiences.
 
 \section{Motivation}
+Emotions are of important component of human behaviour. Research from neuroscience, psychology, and cognitive science suggest that emotion plays a critical role in rational and intelligent behavior ~\cite{picard2001toward}. Emotion interacts with thinking in ways that are non-obvious, but important for intelligent functioning ~\cite{picard2001toward}. Scientists have amassed evidence that emotional skills are a basic component of intelligence, especially for learning preferences and adapting to what is important ~\cite{mayer1993intelligence, goleman2006emotional} People express their emotions through facial expressions, body movement, gestures and tone of voice, and expect others understand and answer to their affective state. But sometimes there is a distinction between inner emotional experiences and the outward emotional expressions ~\cite{picard2003affective}. Some emotions can be hard to recognize by humans, and inner emotional experiences may not be expressed outwardly ~\cite{jones2007biometric}. Recent extensive investigations of physiological signals for emotion detection have been providing encouraging results where affective states are directly related to change in physiological signals ~\cite{jones2007biometric}. However whether we can use physiological patterns to recognize distinct emotions is still a question ~\cite{picard2001toward, cacioppo1990inferring}.
 
-Emotions are of important and mysterious human attributes that have a great effect on people's day to day behavior. Researchs from neuroscience, psychology, and cognitive science, suggests that emotion plays critical roles in rational and intelligent behavior ~\cite{picard2001toward}. Apparently, emotion interacts with thinking in ways that are nonobvious but important for intelligent functioning ~\cite{picard2001toward}. Scientists have amassed evidence that emotional skills are a basic component of intelligence, especially for learning preferences and adapting to what is important ~\cite{mayer1993intelligence, goleman2006emotional} People used to express their emotions through facial expressions, body movement, gestures and tone of voice and expect others understand and answer to their affective state. But sometimes there is a distinction between inner emotional experiences and the outward emotional expressions ~\cite{picard2003affective}. Some emotions can be hard to recognise by humans, and inner emotional experiences may not be expressed outwardly ~\cite{jones2007biometric}. Recent extensive investigations of physiological signals for emotion detection have been providing encouraging results where affective states are directly related to change in inner bodily signals ~\cite{jones2007biometric}. However whether we can use physiological patterns to recognize distinct emotions is still a question ~\cite{picard2001toward, cacioppo1990inferring}.
-
-Although the study of affective computing has increased considerably during the last years, few have applied their research to play technologies ~\cite{sykes2003affective}. Emotional component of human computer interaction in video games is surprisingly important. Game players frequently turn to the console in their search for an emotional experience ~\cite{rouse2010game}. There are numerous benefits such technology could bring video game experience, like: The ability to generate game content dynamically with respect to the affective state of the player, the ability to communicate the affective state of the game player to third parties and adoption of new game mechanics based on the affective state of the player ~\cite{sykes2003affective}. Xiang et al. provided an emotion based dynamic game adjusting prototype, which utilizes facial expression captured using a camera ~\cite{xiang2013dynamic}. Sykes and Brown have shown data from gamepad correlates with a player’s level of arousal during game play ~\cite{sykes2003affective}. Aggag and Revett in their work on affective gaming with use of the GSR signal, have developed a basic First-Person Shooter (FPS) that was supposed to be played in two different difﬁculty levels interleavingly ~\cite{aggag2011affective}. They have considered players’ arousal level as a function of the difﬁculty of the game. Tijs et al. study on Stimulus has shown the unguided adaption of players speed has resulted the slow-mode being too slow and the fast-mode being a bit too fast for some players and described their work on induction of boredom, frustration and enjoyment through manipulation of the game mechanic ¨speed¨partly successful ~\cite{tijs2009creating}.
+Although the study of affective computing has increased considerably during the last years, few have applied their research to play technologies ~\cite{sykes2003affective}. Emotional component of human computer interaction in video games is surprisingly important. Game players frequently turn to the console in their search for an emotional experience ~\cite{rouse2010game}. There are numerous benefits such technology could bring video game experience, like: The ability to generate game content dynamically with respect to the affective state of the player, the ability to communicate the affective state of the game player to third parties and adoption of new game mechanics based on the affective state of the player ~\cite{sykes2003affective}. Xiang et al. provided an emotion based dynamic game adjusting prototype, which utilizes facial expression captured using a camera ~\cite{xiang2013dynamic}. Sykes and Brown have shown data from gamepad correlates with a player's level of arousal during game play ~\cite{sykes2003affective}. Aggag and Revett in their work on affective gaming with use of the GSR signal, have developed a basic First-Person Shooter (FPS) that was supposed to be played in two different difficulty levels interleavingly ~\cite{aggag2011affective}. They have considered players' arousal level as a function of the difficulty of the game. Tijs et al. study on Stimulus has shown the unguided adaption of players speed has resulted the slow-mode being too slow and the fast-mode being a bit too fast for some players and described their work on induction of boredom, frustration and enjoyment through manipulation of the game mechanic ``speed'' partly successful ~\cite{tijs2009creating}.
 
 \section{Solution}
+While recognizing affect state of game players is an integral part of a true affectively-adapting dynamic game balance mechanism, we need a proper way to collect player's affect state (and not only physiological states) during the play. In 2007 Mandryk and Atkins presented a method of continuously identifying affective states of a user playing a computer game ~\cite{mandryk2007fuzzy}. Although their work focuses on physiological affect recognition approaches for video game evaluation purposes, we believe their approach is also useful to extract player's affect state in real-time to be used for game balance purposes. Mandryk and Atkins approach serves as an continuous pipeline using the dimensional emotion model and a fuzzy logic approach on a set of physiological measures to transform physiological signals such as GSR, HR, and facial EMG into arousal and valence variables and then transform arousal and valence variables into five player-centric affective states including: boredom, challenge, excitement, frustration and fun ~\ref{fig:fuzzy-transformation}. In this work we present a version of their affect recognition approach which works in real-time and in parallel to the game-engine. Using this mechanism games can have access to players affect state while playing. We believe our framework can serve to provide players affect state as a secondary input to enable affectively-adapting dynamic game balance strategies manipulate the game in a better conformity to players cognitive state to create the optimal experience (which is referred to in literature as e.g. flow ~\cite{chen2007flow} or immersion ~\cite{nacke2008flow}.
 
-
+\largeimg
+{Fuzzy logic approach to transform physiological signals into affective states}
+{Fuzzy logic approach to transform physiological signals into AV space and then transform arousal and valence into player-centric affective states ~\cite{mandryk2007fuzzy}}
+{fuzzy-transformation.png}
+{fuzzy-transformation}
 
 \section{Contributions}
+To systematically explore affectively-adapting game elements, we created a system with which to deploy a design probe in affective game design. Our primary contribution is not the mapping of physiological variables to game state, but an understanding of how design decisions affect player experience. We created a custom zombie survival level for Half-Life 2 – a popular first person shooter (FPS) – as a test bed, and interfaced it with a system that inferred arousal from galvanic skin response (GSR) signals. Arousal state was then fed back to the player through changing aspects of the game. Our design probe investigated three ways in which games can adapt. First, we increased or decreased the strength of the player's avatar (through speed and access to weapons). Second, we manipulated the strength of the zombie opponents (through their speed and number). Third, we varied the surrounding environment to increase or decrease support for the player (through varying the spawning of health packs and the visibility of the environment due to fog). We had sixteen participants play each approach along with a non-adapting control condition, and collected data on adaptation amount, player performance, and player experience.
 
-To systematically explore affectively-adapting game elements, we created a system with which to deploy a design probe in affective game design. Our primary contribution is not the mapping of physiological variables to game state, but an understanding of how design decisions affect player experience. We created a custom zombie survival level for Half-Life 2 – a popular first person shooter (FPS) – as a test bed, and interfaced it with a system that inferred arousal from galvanic skin response (GSR) signals. Arousal state was then fed back to the player through changing aspects of the game. Our design probe investigated three ways in which games can adapt. First, we increased or decreased the strength of the player’s avatar (through speed and access to weapons). Second, we manipulated the strength of the zombie opponents (through their speed and number). Third, we varied the surrounding environment to increase or decrease support for the player (through varying the spawning of health packs and the visibility of the environment due to fog). We had sixteen participants play each approach along with a non-adapting control condition, and collected data on adaptation amount, player performance, and player experience.
-
-The results of our design probe suggest that affectively-adapting games increases a player’s arousal during play; however, there were differences between the three approaches. Results suggest that decreasing the challenge by adapting the number and strength of the NPC enemies is not as effective as giving the players the tools needed to overcome greater challenges, as we did when adapting the strengths of the player or the supportiveness of the environment. These results are in line with recent work that suggests that thwarting the need for competence within the context of a game affects player experience ~\cite{przybylski2013competence}. Game designers can use our results to inform their decisions on how to support players to experience competence while still optimizing player engagement.
+The results of our design probe suggest that affectively-adapting games increases a player's arousal during play; however, there were differences between the three approaches. Results suggest that decreasing the challenge by adapting the number and strength of the NPC enemies is not as effective as giving the players the tools needed to overcome greater challenges, as we did when adapting the strengths of the player or the supportiveness of the environment. These results are in line with recent work that suggests that thwarting the need for competence within the context of a game affects player experience ~\cite{przybylski2013competence}. Game designers can use our results to inform their decisions on how to support players to experience competence while still optimizing player engagement.
 
 \section{Thesis Outline}
 
@@ -54,7 +51,7 @@ In the remainder of this thesis, we will provide a discussion of related work an
 \begin{itemize}
 \item In Chapter ~\ref{chap:emotion}, we first outline different emotion recognition theories with an overview of physiology sensors, and then we describe the state of affective games.
 \item Chapter ~\ref{chap:video-games} gives an overview of ideas around flow in video games and different game balance theories. It also explores recent works have done on affective gaming and dynamically game balancing.
-\item In Chapter ~\ref{chap:impl} we explore some implementation details of our system that adapts game play based on a user’s affective state.
+\item In Chapter ~\ref{chap:impl} we explore some implementation details of our system that adapts game play based on a user's affective state.
 \item Chapter ~\ref{chap:exprm} follow with an account of our design probe with sixteen participants, and the results that we found in terms of adaptation, performance, and player experience.
 \item Chapter ~\ref{chap:discus} discusses our findings and presents opportunities for future work.
 \item Finally, we give our conclusion in Chapter ~\ref{chap:conclusion}.
