--- a/thesis/content/chp-2-emotion.tex
+++ b/thesis/content/chp-2-emotion.tex
@@ -11,7 +11,7 @@
 
 %%% 1 page: overview of what is going on
 
-Using emotional responses to adapt interaction with a real-time play technology requires a method of identifying specific emotion states within an emotional space. Methods of describing emotions in the psychology literature include: basic emotion theory ~\cite{ekman1992argument, ekman1992there}, which uses a series of semantic labels (e.g., joy, fear) to identify emotion discrete categories; and dimensional emotion theory ~\cite{lang1995emotion, russell1989affect}, which argues that emotions reside in a two-dimensional space defined by arousal and valence. Regardless of how we characterize emotional response in a person, our goal is to sense the emotional state of a user and use that information in a real-time manner to adapt gameplay. Thus, we refer to a player having an affective state and we aim to adapt to a player’s affect – the use of ‘affect’ reflects that we are less concerned with advancing the theories of emotion and more concerned with using emotionally-relevant player states to drive gameplay.
+Using emotional responses to adapt interaction with a real-time play technology requires a method of identifying specific emotion states within an emotional space. Methods of describing emotions in the psychology literature include: basic emotion theory ~\cite{ekman1992argument, ekman1992there}, which uses a series of semantic labels (e.g., joy, fear) to identify emotion discrete categories; and dimensional emotion theory ~\cite{lang1995emotion, russell1989affect}, which argues that emotions reside in a two-dimensional space defined by arousal and valence. Regardless of how we characterize emotional response in a person, our goal is to sense the emotional state of a user and use that information in a real-time manner to adapt gameplay. Thus, we refer to a player having an affective state and we aim to adapt to a player's affect – the use of `affect' reflects that we are less concerned with advancing the theories of emotion and more concerned with using emotionally-relevant player states to drive gameplay.
 
 In this chapter, related research to this work is being presented. It starts with introducing and reviewing common terminology used in the research on affect and emotion and the methods that have been used to measure affect and emotion.
 
@@ -21,7 +21,7 @@ This section introduces common terms used in the literature along with different
 
 \subsection{Terminology}
 
-The terms \textit{affect} and \textit{emotion} are often used interchangeably and using these terms without any specific description highlighting their differences can be usually confusing. To avoid this confusion it is important to understand the distinction between these terms. In this thesis, \textit{affect} is used in a more general sense that encompasses emotions ~\cite{forgas1995mood} while \textit{emotions} are usually reactionary fealings often triggered by some particular cause either physical or cognitive and are short in duration; Individuals are usually aware of the presence of an emotion ~\cite{paiva2007affective}.
+The terms \textit{affect} and \textit{emotion} are often used interchangeably and using these terms without any specific description highlighting their differences can be usually confusing. To avoid this confusion it is important to understand the distinction between these terms. In this thesis, \textit{affect} is used in a more general sense that encompasses emotions ~\cite{forgas1995mood} while \textit{emotions} are usually reactionary feelings often triggered by some particular cause either physical or cognitive and are short in duration; Individuals are usually aware of the presence of an emotion ~\cite{paiva2007affective}.
 
 Classical attempts to describe emotion can be categorized into two major different approaches: Those that try to describe emotion by emphasizing its cognitive (mental) aspects and those that concentrate on its bodily (physical) aspects. Walter Cannon by suggesting emotion as an experience within the brain, independent of the sensations of the body ~\cite{cannon1927james} is usually credited for the cognitive approach. On the other hand the physical approach has largely been attributed to William James in which physiological responses (e.g. elevated heart rate) are the center of focus that occurs just prior or during an emotional episode ~\cite{paiva2007affective}.
 
@@ -67,22 +67,22 @@ There are many visible features that can be observed and measured in our everyda
 Many physiological changes in the body occurring during an emotional episode is not visible to another person. Many researchers have considered using physiological data to identify emotional states. It was first speculated by William James to use patterns of physiological responses to recognize emotion ~\cite{cacioppo2000psychophysiology}. Although this approach does not consider the individual's psyche and mind state to identify emotions but many evidences suggest that physiological data sources can differentiate among some emotions ~\cite{ekman1983autonomic}. Picard et al. performed a feature-based recognition of eight emotional states from GSR, EMG of the jaw, BVP and respiration over multiple days ~\cite{picard2001toward}. Their work presents and compares multiple algorithms for feature-based recognition of emotional states partially corrected for day-to-day differences and provides an 81\% accuracy on recognizing eight emotional states. Mandryk et al. shown how to measure and use physiological metrics such as galvanic skin response (GSR), respiration, electrocardiography (EKG), and electromyography of the jaw (EMG) as indicators of participants' affective states while playing video games ~\cite{mandryk2007fuzzy}.
 
 \section{Measuring Affect}
-When evaluating affective interfaces and interactions in HCI, one of the most important and primary challenges is to detect affect state of the user. measuring affect can be addressed under different titles such as sensing, detection or recognition. However we chose to use `measurement' to signify all these different expressions. There are multiple ways that researchers have created to measure affect in people. For example, researchers have used facial expressions [25], typing rhythms [9], and voice signal analysis [26] to characterize a user’s affective state. However, the most common approach is to gather physiological signals and use mathematical modeling approaches to characterize affective state reflected by the physiological measurements [21]. For example, heart rate (HR), blood pressure, respiration, galvanic skin response (GSR), and facial EMG (Electromyography) are physiological variables that have been shown to correlate with with various affective states [22]. Interpreting physiological measures can be difficult, due to noisy signals and difficulties with inference; however, recent progress in this area has been promising. In addition, there has been work to apply physiological affect recognition approaches to video game evaluation. Mandryk and Atkins presented a method of continuously identifying affective states of a user playing a computer game [21]. Using the dimensional emotion model and a fuzzy logic approach on a set of physiological measures, the authors transform GSR, HR, and facial EMG (for frowning and smiling) into arousal and valence variables and then transform arousal and valence variables into five player-centric affective states including: boredom, challenge, excitement, frustration and fun. The advantage of continuously and quantitatively assessing user's affective state during an entire play session using their fuzzy logic model is what makes their model appropriate for real-time play technologies. Classically there are two major approaches for affect measurement: physiological measures and self-report. In the following a brief description of self-report approach continues with a look into today most popular physiological measures that are used in this work.
+When evaluating affective interfaces and interactions in HCI, one of the most important and primary challenges is to detect affect state of the user. measuring affect can be addressed under different titles such as sensing, detection or recognition. However we chose to use `measurement' to signify all these different expressions. There are multiple ways that researchers have created to measure affect in people. For example, researchers have used facial expressions ~\cite{partala2006real}, typing rhythms ~\cite{epp2011identifying}, and voice signal analysis ~\cite{picard2003affective} to characterize a user's affective state. However, the most common approach is to gather physiological signals and use mathematical modeling approaches to characterize affective state reflected by the physiological measurements ~\cite{mandryk2007fuzzy}. For example, heart rate (HR), blood pressure, respiration, galvanic skin response (GSR), and facial EMG (Electromyography) are physiological variables that have been shown to correlate with with various affective states ~\cite{mandryk2008physiological}. Interpreting physiological measures can be difficult, due to noisy signals and difficulties with inference; however, recent progress in this area has been promising. In addition, there has been work to apply physiological affect recognition approaches to video game evaluation. Mandryk and Atkins presented a method of continuously identifying affective states of a user playing a computer game ~\cite{mandryk2007fuzzy}. Using the dimensional emotion model and a fuzzy logic approach on a set of physiological measures, the authors transform GSR, HR, and facial EMG (for frowning and smiling) into arousal and valence variables and then transform arousal and valence variables into five player-centric affective states including: boredom, challenge, excitement, frustration and fun. The advantage of continuously and quantitatively assessing user's affective state during an entire play session using their fuzzy logic model is what makes their model appropriate for real-time play technologies. Classically there are two major approaches for affect measurement: physiological measures and self-report. In the following a brief description of self-report approach continues with a look into today most popular physiological measures that are used in this work.
 
 \subsection{Self-Report}
 Self-report measures is to figure out the emotional state of an individual by directly questioning the individual. This is usually done through a familiar language and vocabulary, or sometimes using images that carry a common meaning within different languages and cultures. This is in fact trying to find out about an individual's emotional state through his or her verbal descriptions, and it can have different forms like rating scales, standardized checklists, questionnaires, semantic graphical differentials and projective methods. Self-report is maybe the simplest and easiest way too approach the issue of affect measurement, and it suffers some major weaknesses. Criticisms of self-report methods include the possibility that they draw attention to what the experimenter is trying to measure, that they fail to measure mild (low intensity) emotions, and that they are not construct valid ~\cite{isen2007some}.
 
 \subsubsection{Game Engagement/Experience Questionnaire}
-The Game Engagement/Experience Questionnaire (GEQ) measures gamer's engagement during a video game play ~\cite{brockmyer2009development}. This questionnaire consists of 19 items scored on a Likert scale. This questionnaire specifically measures engagement level as absorption, flow, presence and immersion. Cronbach’s alpha for the current 19-item version of the GEQ is .85. The Rasch estimate of person reliability (the Rasch analog to Cronbach’s alpha) for the 19-item version is .83 and the item reliability is .96 ~\cite{brockmyer2009development}. In this work, this questionnare is used as a subjective measure in chapter ~\ref{chap:exprm}.
+The Game Engagement/Experience Questionnaire (GEQ) measures gamer's engagement during a video game play ~\cite{brockmyer2009development}. This questionnaire consists of 19 items scored on a Likert scale. This questionnaire specifically measures engagement level as absorption, flow, presence and immersion. Cronbach's alpha for the current 19-item version of the GEQ is .85. The Rasch estimate of person reliability (the Rasch analog to Cronbach's alpha) for the 19-item version is .83 and the item reliability is .96 ~\cite{brockmyer2009development}. In this work, this questionnaire is used as a subjective measure in chapter ~\ref{chap:exprm}.
 
 \subsubsection{Intrinsic Motivation Inventory}
-The Intrinsic Motivation Inventory (IMI) utilizes several sub-scales that relate to user experience during a targeted activity ~\cite{ryan1983relation}. This questionnaire is a useful measure for interactive technologies such as games and has been utilies in several studies. For this study the Interest-Enjoyment sub-scale that contains 5 questions, the Effort sub-scale that contains 4 questions and the Pressure-Tension sub-scale that contains 4 questions will be used. The interest-enjoyment sub-scale is associated with self-reported intrinsic motivation. More information about this questionnaire and the experiment can be found in chapter ~\ref{chap:exprm}
+The Intrinsic Motivation Inventory (IMI) utilizes several sub-scales that relate to user experience during a targeted activity ~\cite{ryan1983relation}. This questionnaire is a useful measure for interactive technologies such as games and has been utilized in several studies. For this study the Interest-Enjoyment sub-scale that contains 5 questions, the Effort sub-scale that contains 4 questions and the Pressure-Tension sub-scale that contains 4 questions will be used. The interest-enjoyment sub-scale is associated with self-reported intrinsic motivation. More information about this questionnaire and the experiment can be found in chapter ~\ref{chap:exprm}
 
 \subsubsection{Player Experience of Need Satisfaction}
-Player Experience of Need Satisfaction model (PENS) introduces a practical theory of player motivation that has meaningfully contributed to developers' understanding of what really satisfies players. This work done by Immersyve ~\cite{rigby2007pens} provides a practical testing methodology and analytic approach with proven value. Numerous data demonstrate competencce, autonomy and relatedness at the heart of player's fun, enjoyment and valuing of games, PENS outlines and measures these three intrinsic psychological needs through 21 items scored on a Likert scale ~\cite{rigby2007pens}. PENS model can significantly predict pisitive experiential and commercial outcomes through collecting data on how these needs are being satisfied, in many cases this has happened much more strongly than more traditional measures of fun and enjoyment. It is important to note the plausible predictive values demonstrated by PENS model repeatedly have been done regardless of genre, platform or even the individual preferences of players ~\cite{rigby2007pens}.
+Player Experience of Need Satisfaction model (PENS) introduces a practical theory of player motivation that has meaningfully contributed to developers' understanding of what really satisfies players. This work done by Immersyve ~\cite{rigby2007pens} provides a practical testing methodology and analytic approach with proven value. Numerous data demonstrate competence, autonomy and relatedness at the heart of player's fun, enjoyment and valuing of games, PENS outlines and measures these three intrinsic psychological needs through 21 items scored on a Likert scale ~\cite{rigby2007pens}. PENS model can significantly predict positive experiential and commercial outcomes through collecting data on how these needs are being satisfied, in many cases this has happened much more strongly than more traditional measures of fun and enjoyment. It is important to note the plausible predictive values demonstrated by PENS model repeatedly have been done regardless of genre, platform or even the individual preferences of players ~\cite{rigby2007pens}.
 
 \subsubsection{Self-Assessment-Manikin Arousal Scales}
-The Self-Assessment Manikin (SAM) ~\cite{lang1985cognitive} presents a promising solution to the problems that have been associated with measuring emotional response in Mehrabian and Russell's three PAD dimensions ~\cite{russell1977evidence}. SAM takes a visual approach to design an alternative to the sometimes-combersome verbal self-report measures ~\cite{lang1985cognitive}.
+The Self-Assessment Manikin (SAM) ~\cite{lang1985cognitive} presents a promising solution to the problems that have been associated with measuring emotional response in Mehrabian and Russell's three PAD dimensions ~\cite{russell1977evidence}. SAM takes a visual approach to design an alternative to the sometimes-cumbersome verbal self-report measures ~\cite{lang1985cognitive}.
 
 \img
 {SAM The Self-Assessment Manikin}
@@ -94,11 +94,11 @@ SAM has been used in numerous psychophysiological studies since its development.
 
 By visually oriented scales and a graphic character it is clear that SAM eliminate the majority of problems associated with verbal measures or nonverbal measures that are based on human photographs. The simple and visual scales help individuals complete ratings on the SAM scales in less than 15 seconds, and therefore this allowes numerous stimuli to be tested in a short amount of time and causing less respondent wearout than the verbal measures. Subjects have expressed greater interest in SAM ratings versus verbal self-reports in a number of studies and have stated that SAM is more likely to hold their attention ~\cite{lang1985cognitive}. A third advantage is that both children and adults readily identify with the SAM figure and easily understand the emotional dimensions it represents ~\cite{lang1985cognitive}. Because SAM is a culture-free, language-free measurement it is suitable for use in different countries and cultures ~\cite{bradley1993affective}.
 
-%%TODO: a paragraph about problems with subjective measures
+There is a longstanding controversy in evaluation indicators research between the `objective' and the `subjective' approach. In the objective approach the focus is on measuring `hard' facts such as players performance in terms of in-game statistics (e.g. number of killed enemies or collected points) while on the other hand the subjective approach considers `soft' matters such as gamers satisfaction with the play experience or player's experience of flow in the game. The objective approach roots in the tradition of social statistics which dates back to 19th century. The subjective approach stems from survey research which took off in the 1960's ~\cite{veenhoven2002social}. Subject questions to elicit meaningfulness answers, largely base on experimental and empirical work that has investigated the meaningfulness of answers to the questions with an effort to minimize cognitive factors affect on responses.
 
 \subsection{Physiological Measures}
 
-Physiological signals such as facial expressions, vocal tone, skin conductance, heart rate, blood pressure, respiration, pupillary dilation, electroencephalography (EEG) or muscle action, being looked into to determine the intensity and quality of and individual's internal affective state are usually referred to as physiological measures. As for self-report measures, there are concers with physiological measures that usually relate to (1) setup, invasiveness, and attendance that the involved devices require and (2) the association of specific physical responses with a particular type of emotion because of individual variability ~\cite{depaula2005cognitive}
+Physiological signals such as facial expressions, vocal tone, skin conductance, heart rate, blood pressure, respiration, pupillary dilation, electroencephalography (EEG) or muscle action, being looked into to determine the intensity and quality of and individual's internal affective state are usually referred to as physiological measures. As for self-report measures, there are concerns with physiological measures that usually relate to (1) setup, invasiveness, and attendance that the involved devices require and (2) the association of specific physical responses with a particular type of emotion because of individual variability ~\cite{depaula2005cognitive}
 
 At the following a number of most popular physiological measures also used in this work are shortly introduced.
 
@@ -124,7 +124,7 @@ The relation between sympathetic activity and emotional arousal due to a stimuli
 \subsubsection{Heart Rate}
 Easiest way to measure heart rate, is by finding the pulse of the heart by looking at any region of body where the artery's pulsation is easily detectable at the surface of skin; By pressuring that region with index and middle fingers against the underlying structures such as bone the pulse of the heart can be detected. The neck under the corner of the jaw, the wrist and the upper arm are best places to find the blood vessels close to the skin's surface and therefore easily feel the pulse of the heart when blood is pumped through the body.
 
-Electrocardiograph or ECG (also abbreviated EKG) is the device usually used for more precise determination of heart's pulse. This device is quite popular in clinical settings for continious monitoring of heart, particularly in critical care settings such as ICU. EKG uses electrodes placed on the surface of the skin to measure the electrical activity of the heart. Usual places to attach these electrodes are on the chest, forearm or legs. Conductive gels should be applied on the bare skin before attaching these electrodes, also there should be no gap between the electrodes and the skin so the area usually needs to be shaved and must be free of hair to prevent interferences with the sensors ~\cite{stern2001psychophysiological}.
+Electrocardiograph or ECG (also abbreviated EKG) is the device usually used for more precise determination of heart's pulse. This device is quite popular in clinical settings for continuous monitoring of heart, particularly in critical care settings such as ICU. EKG uses electrodes placed on the surface of the skin to measure the electrical activity of the heart. Usual places to attach these electrodes are on the chest, forearm or legs. Conductive gels should be applied on the bare skin before attaching these electrodes, also there should be no gap between the electrodes and the skin so the area usually needs to be shaved and must be free of hair to prevent interferences with the sensors ~\cite{stern2001psychophysiological}.
 
 On an ECG the heart rate is measured using the R wave to R wave interval (RR interval). Accurate R peak detection is essential in signal processing equipment for heart rate measurement ~\cite{pise2011thinkquest}, in this work this has been done by looking at signal derivatives after applyting passes of smoothing to the signal data.
 
@@ -134,7 +134,7 @@ On an ECG the heart rate is measured using the R wave to R wave interval (RR int
 {ekg-rr-interval.pdf}
 {ekg-rr-interval}
 
-Blood Volume Pulse sensor (BVP or photoplethysmograph) and Pulse oximetry are also another comparatively non-invasive methods for monitoring an individual's pulse. In BVP an infra-red beam in bounced against a skin surface and measures the puls by looking at the amount of reflected light. The reflected amount of light would change by passing through different volume of blood in the skin. Therefore when there is larger volume of blood in the skin, due it its red color it absorbs larger amount of other colors and more red color would be reflected, but when the skin does not contain large volume of blood more amount of other colors are reflected. Using the BVP signal in addition to the heart rate the software can usually also calculate the inter-beat interval. The amplitude of the BVP deviation can also be a useful measure. Heart Rate Variability can also be calculated with the BVP.
+Blood Volume Pulse sensor (BVP or photoplethysmograph) and Pulse oximetry are also another comparatively non-invasive methods for monitoring an individual's pulse. In BVP an infra-red beam in bounced against a skin surface and measures the pulse by looking at the amount of reflected light. The reflected amount of light would change by passing through different volume of blood in the skin. Therefore when there is larger volume of blood in the skin, due it its red color it absorbs larger amount of other colors and more red color would be reflected, but when the skin does not contain large volume of blood more amount of other colors are reflected. Using the BVP signal in addition to the heart rate the software can usually also calculate the inter-beat interval. The amplitude of the BVP deviation can also be a useful measure. Heart Rate Variability can also be calculated with the BVP.
 
 \img
 {Blood Volume Pulse (BVP) Sensor}
@@ -146,7 +146,7 @@ Heart Rate Variability (HRV) is the phenomenon of variation in the time interval
 
 \subsubsection{Facial Electromyography}
 
-Electromyography in general refers to a technique that measures muscle activity by detecting and amplifying the tiny electrical impulses that are generated by muscle fibers when they contract. Facial Electromyography (fEMG) primarily focuses on two major muscle groups in the face. The corrugator supercilii group which is usually assosciated with frowning and the zygomaticus major muscle group which is associated with smiling ~\cite{larsen2003effects, sato2008enhanced}.
+Electromyography in general refers to a technique that measures muscle activity by detecting and amplifying the tiny electrical impulses that are generated by muscle fibers when they contract. Facial Electromyography (fEMG) primarily focuses on two major muscle groups in the face. The corrugator supercilii group which is usually associated with frowning and the zygomaticus major muscle group which is associated with smiling ~\cite{larsen2003effects, sato2008enhanced}.
 
 Many studies have assessed Facial EMG's utility as a tool for measuring emotional reaction ~\cite{dimberg1990facial}. Studies have found that activity of the corrugator muscle, which lowers the eyebrow and is involved in producing frowns, varies inversely with the emotional valence of presented stimuli and reports of mood state. Activity of the zygomatic major muscle, which controls smiling, is said to be positively associated with positive emotional stimuli and positive mood state.
 
