--- a/thesis/content/app-av-to-emotion.tex
+++ b/thesis/content/app-av-to-emotion.tex
@@ -1,72 +1,72 @@
 
 The following 67 rules were used as described in Section ~\ref{subsec:fuzzi} to convert arousal and valence into boredom, challenge, excitement, frustration, and fun:
 
-\begin{enumerate}
-\item If (arousal is not veryLow) and (valence is midHigh) then (fun is low)
-\item If (arousal is not low) and (valence is midHigh) then (fun is low)
-\item If (arousal is not veryLow) and (valence is high) then (fun is medium)
-\item If (valence is veryHigh) then (fun is high)
-\item If (arousal is midHigh) and (valence is midLow) then (challenge is low)
-\item If (arousal is midHigh) and (valence is midHigh) then (challenge is low)
-\item If (arousal is high) and (valence is midLow) then (challenge is medium)
-\item If (arousal is high) and (valence is midHigh) then (challenge is medium)
-\item If (arousal is veryHigh) and (valence is midLow) then (challenge is high)
-\item If (arousal is veryHigh) and (valence is midHigh) then (challenge is high)
-\item If (arousal is midLow) and (valence is midLow) then (boredom is low)
-\item If (arousal is midLow) and (valence is low) then (boredom is medium)
-\item If (arousal is low) and (valence is low) then (boredom is medium)
-\item If (arousal is low) and (valence is midLow) then (boredom is medium)
-\item If (arousal is midLow) and (valence is veryLow) then (boredom is high)
-\item If (arousal is low) and (valence is veryLow) then (boredom is high)
-\item If (arousal is veryLow) and (valence is veryLow) then (boredom is high)
-\item If (arousal is veryLow) and (valence is low) then (boredom is high)
-\item If (arousal is veryLow) and (valence is midLow) then (boredom is high)
-\item If (arousal is midHigh) and (valence is midLow) then (frustration is low)
-\item If (arousal is midHigh) and (valence is low) then (frustration is medium)
-\item If (arousal is high) and (valence is low) then (frustration is medium)
-\item If (arousal is high) and (valence is midLow) then (frustration is medium)
-\item If (arousal is midHigh) and (valence is veryLow) then (frustration is high)
-\item If (arousal is high) and (valence is veryLow) then (frustration is high)
-\item If (arousal is veryHigh) and (valence is veryLow) then (frustration is high)
-\item If (arousal is veryHigh) and (valence is low) then (frustration is high)
-\item If (arousal is veryHigh) and (valence is midLow) then (frustration is high)
-\item If (valence is veryLow) then (fun is veryLow)(challenge is veryLow)
-\item If (valence is low) then (fun is veryLow)(challenge is veryLow)
-\item If (valence is high) then (challenge is veryLow)(boredom is veryLow)(frustration is veryLow)
-\item If (valence is veryHigh) then (challenge is veryLow) (boredom is veryLow)(frustration is veryLow)
-\item If (valence is midHigh) then (boredom is veryLow) (frustration is veryLow)
-\item If (arousal is veryLow) then (challenge is veryLow) (frustration is veryLow)
-\item If (arousal is low) then (challenge is veryLow)(frustration is veryLow)
-\item If (arousal is midLow) then (challenge is veryLow) (frustration is veryLow)
-\item If (arousal is midHigh) then (boredom is veryLow)
-\item If (arousal is high) then (boredom is veryLow)
-\item If (arousal is veryHigh) then (boredom is veryLow)
-\item If (arousal is veryLow) and (valence is midHigh) then (fun is veryLow)
-\item If (arousal is low) and (valence is midHigh) then (fun is veryLow)
-\item If (arousal is veryLow) and (valence is high) then (fun is low)
-\item If (valence is midLow) then (fun is veryLow)
-\item If (arousal is veryLow) and (valence is high) then (boredom is low)
-\item If (arousal is low) and (valence is midHigh) then (boredom is low)
-\item If (arousal is veryLow) and (valence is midHigh) then (boredom is medium)
-\item If (arousal is veryHigh) and (valence is veryLow) then (challenge is medium)
-\item If (arousal is veryHigh) and (valence is veryHigh) then (challenge is medium)
-\item If (arousal is high) and (valence is low) then (challenge is low)
-\item If (arousal is high) and (valence is high) then (challenge is low)
-\item If (arousal is veryHigh) and (valence is low) then (challenge is high)
-\item If (arousal is veryHigh) and (valence is high) then (challenge is high)
-\item If (arousal is midHigh) and (valence is midHigh) then (excitement is low)
-\item If (arousal is high) and (valence is midHigh) then (excitement is medium)
-\item If (arousal is high) and (valence is high) then (excitement is medium)
-\item If (arousal is midHigh) and (valence is high) then (excitement is medium)
-\item If (arousal is veryHigh) and (valence is midHigh) then (excitement is high)
-\item If (arousal is veryHigh) and (valence is high) then (excitement is high)
-\item If (arousal is veryHigh) and (valence is veryHigh) then (excitement is high)
-\item If (arousal is high) and (valence is veryHigh) then (excitement is high)
-\item If (arousal is midHigh) and (valence is veryHigh) then (excitement is high)
-\item If (arousal is midLow) then (excitement is veryLow)
-\item If (arousal is low) then (excitement is veryLow)
-\item If (arousal is veryLow) then (excitement is veryLow)
-\item If (valence is veryLow) then (excitement is veryLow)
-\item If (valence is low) then (excitement is veryLow)
-\item If (valence is midLow) then (excitement is veryLow)
-\end{enumerate}
+\begin{lstlisting}[language=c]
+if (valence is veryHigh)    then (fun is high)
+if (valence is veryLow)     then (fun is veryLow) (challenge is veryLow)
+if (valence is low)         then (fun is veryLow) (challenge is veryLow)
+if (valence is midLow)      then (fun is veryLow)
+if (arousal is midHigh)     then (boredom is veryLow)
+if (arousal is high)        then (boredom is veryLow)
+if (arousal is veryHigh)    then (boredom is veryLow)
+if (valence is midHigh)     then (boredom is veryLow) (frustration is veryLow)
+if (arousal is midLow)      then (excitement is veryLow)
+if (arousal is low)         then (excitement is veryLow)
+if (arousal is veryLow)     then (excitement is veryLow)
+if (valence is veryLow)     then (excitement is veryLow)
+if (valence is low)         then (excitement is veryLow)
+if (valence is midLow)      then (excitement is veryLow)
+if (arousal is veryLow)     then (challenge is veryLow) (frustration is veryLow)
+if (arousal is low)         then (challenge is veryLow) (frustration is veryLow)
+if (arousal is midLow)      then (challenge is veryLow) (frustration is veryLow)
+if (valence is high)        then (challenge is veryLow) (boredom is veryLow) (frustration is veryLow)
+if (valence is veryHigh)    then (challenge is veryLow) (boredom is veryLow) (frustration is veryLow)
+if (arousal is not veryLow) and (valence is midHigh)  then (fun is low)
+if (arousal is not low)     and (valence is midHigh)  then (fun is low)
+if (arousal is not veryLow) and (valence is high)     then (fun is medium)
+if (arousal is midHigh)     and (valence is midLow)   then (challenge is low)
+if (arousal is midHigh)     and (valence is midHigh)  then (challenge is low)
+if (arousal is high)        and (valence is midLow)   then (challenge is medium)
+if (arousal is high)        and (valence is midHigh)  then (challenge is medium)
+if (arousal is veryHigh)    and (valence is midLow)   then (challenge is high)
+if (arousal is veryHigh)    and (valence is midHigh)  then (challenge is high)
+if (arousal is midLow)      and (valence is midLow)   then (boredom is low)
+if (arousal is midLow)      and (valence is low)      then (boredom is medium)
+if (arousal is low)         and (valence is low)      then (boredom is medium)
+if (arousal is low)         and (valence is midLow)   then (boredom is medium)
+if (arousal is midLow)      and (valence is veryLow)  then (boredom is high)
+if (arousal is low)         and (valence is veryLow)  then (boredom is high)
+if (arousal is veryLow)     and (valence is veryLow)  then (boredom is high)
+if (arousal is veryLow)     and (valence is low)      then (boredom is high)
+if (arousal is veryLow)     and (valence is midLow)   then (boredom is high)
+if (arousal is midHigh)     and (valence is midLow)   then (frustration is low)
+if (arousal is midHigh)     and (valence is low)      then (frustration is medium)
+if (arousal is high)        and (valence is low)      then (frustration is medium)
+if (arousal is high)        and (valence is midLow)   then (frustration is medium)
+if (arousal is midHigh)     and (valence is veryLow)  then (frustration is high)
+if (arousal is high)        and (valence is veryLow)  then (frustration is high)
+if (arousal is veryHigh)    and (valence is veryLow)  then (frustration is high)
+if (arousal is veryHigh)    and (valence is low)      then (frustration is high)
+if (arousal is veryHigh)    and (valence is midLow)   then (frustration is high)
+if (arousal is veryLow)     and (valence is midHigh)  then (fun is veryLow)
+if (arousal is low)         and (valence is midHigh)  then (fun is veryLow)
+if (arousal is veryLow)     and (valence is high)     then (fun is low)
+if (arousal is veryLow)     and (valence is high)     then (boredom is low)
+if (arousal is low)         and (valence is midHigh)  then (boredom is low)
+if (arousal is veryLow)     and (valence is midHigh)  then (boredom is medium)
+if (arousal is veryHigh)    and (valence is veryLow)  then (challenge is medium)
+if (arousal is veryHigh)    and (valence is veryHigh) then (challenge is medium)
+if (arousal is high)        and (valence is low)      then (challenge is low)
+if (arousal is high)        and (valence is high)     then (challenge is low)
+if (arousal is veryHigh)    and (valence is low)      then (challenge is high)
+if (arousal is veryHigh)    and (valence is high)     then (challenge is high)
+if (arousal is midHigh)     and (valence is midHigh)  then (excitement is low)
+if (arousal is high)        and (valence is midHigh)  then (excitement is medium)
+if (arousal is high)        and (valence is high)     then (excitement is medium)
+if (arousal is midHigh)     and (valence is high)     then (excitement is medium)
+if (arousal is veryHigh)    and (valence is midHigh)  then (excitement is high)
+if (arousal is veryHigh)    and (valence is high)     then (excitement is high)
+if (arousal is veryHigh)    and (valence is veryHigh) then (excitement is high)
+if (arousal is high)        and (valence is veryHigh) then (excitement is high)
+if (arousal is midHigh)     and (valence is veryHigh) then (excitement is high)
+\end{lstlisting}
