--- a/thesis/content/bibliography.bib
+++ b/thesis/content/bibliography.bib
@@ -978,3 +978,147 @@
   year={2013},
   publisher={Sage}
 }
+@article{veenhoven2002social,
+  title={Why social policy needs subjective indicators},
+  author={Veenhoven, Runt},
+  journal={Social indicators research},
+  volume={58},
+  number={1-3},
+  pages={33--46},
+  year={2002},
+  publisher={Springer}
+}
+@article{mandryk2008physiological,
+  title={Physiological measures for game evaluation},
+  author={Mandryk, Regan L},
+  journal={Game usability: Advice from the experts for advancing the player experience},
+  pages={207--235},
+  year={2008},
+  publisher={Morgan Kaufmann}
+}
+@inproceedings{nacke2008flow,
+  title={Flow and immersion in first-person shooters: measuring the player's gameplay experience},
+  author={Nacke, Lennart and Lindley, Craig A},
+  booktitle={Proceedings of the 2008 Conference on Future Play: Research, Play, Share},
+  pages={81--88},
+  year={2008},
+  organization={ACM}
+}
+@inproceedings{saari2005emotional,
+  title={Emotional Regulation System for Emotionally Adapted Games},
+  author={Saari, Timo and Ravaja, Niklas and Laarni, Jari and Turpeinen, Marko},
+  booktitle={Proceedings of FuturePlay 2005 conference},
+  year={2005}
+}
+@article{saari2010technological,
+  title={Technological and Psychological Fundamentals of Psychological Customization Systems: An Example of Emotionally Adapted Games},
+  author={Saari, Timo and Turpeinen, Marko and Ravaja, Niklas},
+  journal={A manuscript submitted for publication},
+  year={2010}
+}
+@incollection{schaefer2008usability,
+  title={The usability of cardiovascular and electrodermal measures for adaptive automation},
+  author={Schaefer, Florian and Haarmann, Andrea and Boucsein, Wolfram},
+  booktitle={Probing Experience},
+  pages={235--243},
+  year={2008},
+  publisher={Springer}
+}
+@inproceedings{takahashi1994experimental,
+  title={Experimental study toward mutual adaptive interface},
+  author={Takahashi, Makoto and Tsuyoshi, Arai and Kuba, O and Yoshikawa, Hidekazu},
+  booktitle={Robot and Human Communication, 1994. RO-MAN'94 Nagoya, Proceedings., 3rd IEEE International Workshop on},
+  pages={271--276},
+  year={1994},
+  organization={IEEE}
+}
+@inproceedings{rani2005maintaining,
+  title={Maintaining optimal challenge in computer games through real-time physiological feedback},
+  author={Rani, Pramila and Sarkar, Nilanjan and Liu, Changchun},
+  booktitle={Proceedings of the 11th International Conference on Human Computer Interaction},
+  volume={58},
+  year={2005}
+}
+@article{bell2003journey,
+  title={The journey to wild divine},
+  author={Bell, C},
+  journal={The Wild Divine Project},
+  url={http://www.wilddivine.com},
+  year={2003}
+}
+@inproceedings{bateman2011target,
+  title={Target assistance for subtly balancing competitive play},
+  author={Bateman, Scott and Mandryk, Regan L and Stach, Tadeusz and Gutwin, Carl},
+  booktitle={Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+  pages={2355--2364},
+  year={2011},
+  organization={ACM}
+}
+@inproceedings{vicencio2014effectiveness,
+  title={The effectiveness (or lack thereof) of aim-assist techniques in first-person shooter games},
+  author={Vicencio-Moreira, Rodrigo and Mandryk, Regan L and Gutwin, Carl and Bateman, Scott},
+  booktitle={Proceedings of the 32nd annual ACM conference on Human factors in computing systems},
+  pages={937--946},
+  year={2014},
+  organization={ACM}
+}
+@article{ryan2000self,
+  title={Self-determination theory and the facilitation of intrinsic motivation, social development, and well-being.},
+  author={Ryan, Richard M and Deci, Edward L},
+  journal={American psychologist},
+  volume={55},
+  number={1},
+  pages={68},
+  year={2000},
+  publisher={American Psychological Association}
+}
+@article{ravaja2004contributions,
+  title={Contributions of psychophysiology to media research: Review and recommendations},
+  author={Ravaja, Niklas},
+  journal={Media Psychology},
+  volume={6},
+  number={2},
+  pages={193--235},
+  year={2004},
+  publisher={Taylor \& Francis}
+}
+@article{yannakakis2008entertainment,
+  title={Entertainment capture through heart rate activity in physical interactive playgrounds},
+  author={Yannakakis, Georgios N and Hallam, John and Lund, Henrik Hautop},
+  journal={User Modeling and User-Adapted Interaction},
+  volume={18},
+  number={1-2},
+  pages={207--243},
+  year={2008},
+  publisher={Springer}
+}
+@article{vicente1987spectral,
+  title={Spectral analysis of sinus arrhythmia: A measure of mental effort},
+  author={Vicente, Kim J and Thornton, D Craig and Moray, Neville},
+  journal={Human Factors: The Journal of the Human Factors and Ergonomics Society},
+  volume={29},
+  number={2},
+  pages={171--182},
+  year={1987},
+  publisher={Sage Publications}
+}
+@article{veltman1993indices,
+  title={Indices of mental workload in a complex task environment},
+  author={Veltman, JA and Gaillard, AWK},
+  journal={Neuropsychobiology},
+  volume={28},
+  number={1-2},
+  pages={72--75},
+  year={1993},
+  publisher={Karger Publishers}
+}
+@article{wientjes1992respiration,
+  title={Respiration in psychophysiology: methods and applications},
+  author={Wientjes, Cornelis JE},
+  journal={Biological psychology},
+  volume={34},
+  number={2},
+  pages={179--203},
+  year={1992},
+  publisher={Elsevier}
+}
